--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"snapcio.ionkom.com\" >> out/CNAME && gh-pages -d out -t true"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "next": "11.1.0",
     "peerjs": "^1.3.2",
     "react": "17.0.2",
