--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "11.1.0",
     "peerjs": "^1.3.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "webrtc-adapter": "^8.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.19",
