--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "peerjs": "^1.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "socket.io-client": "^4.3.1",
     "swr": "^1.0.1",
     "uuid": "^8.3.2",
     "webrtc-adapter": "^8.1.0"
