--- a/package.json
+++ b/package.json
@@ -11,19 +11,17 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "next": "11.1.0",
-    "peerjs": "^1.3.2",
+    "next": "^12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "socket.io-client": "^4.3.1",
+    "socket.io-client": "^4.4.0",
     "swr": "^1.0.1",
     "uuid": "^8.3.2",
     "webrtc-adapter": "^8.1.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.19",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "^4.4.2"
+    "@types/react": "^17.0.37",
+    "eslint-config-next": "12.0.4",
+    "typescript": "^4.5.2"
   }
 }
