--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"snapcio.ionkom.com\" >> out/CNAME && gh-pages -d out -t true"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "i18next": "^21.5.4",
+    "i18next-browser-languagedetector": "^6.1.2",
     "next": "^12.0.4",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.14.3",
+    "react-icons": "^4.3.1",
     "socket.io-client": "^4.4.0",
     "swr": "^1.0.1",
     "uuid": "^8.3.2",
