--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
+    "@tensorflow-models/blazeface": "^0.0.7",
+    "@tensorflow/tfjs-backend-wasm": "^3.13.0",
+    "@types/node": "^17.0.14",
     "gh-pages": "^3.2.3",
     "i18next": "^21.5.4",
     "i18next-browser-languagedetector": "^6.1.2",
